# basketball_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
Training_notebooks/: BballDetection.ipynb  basketball_player_detection_training.ipynb
