[project]
name = "basketball-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "notebook>=7.4.1",
    "roboflow>=1.1.63",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.127",
]
